--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -8,6 +8,16 @@
       </div>
       <div class="panel-body">
         <div class="row">
+          <div class="col-sm-3">
+            <img src="{{profile.avatar_url}}" class="img-circle img-responsive" alt="Profile Image">
+
+          </div>
+          <div class="col-sm-5">
+            <ul class="List-group">
+
+            </ul>
+
+          </div>
 
         </div>
 
