--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -14,6 +14,7 @@
           </div>
           <div class="col-sm-5">
             <ul class="List-group">
+              <li class="List-group-item"></li>
 
             </ul>
 
