added many list group

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -14,7 +14,10 @@
           </div>
           <div class="col-sm-5">
             <ul class="List-group">
-              <li class="List-group-item"></li>
+              <li class="List-group-item" ngIf="profile.bio">{{profile.bio}}</li>
+              <li class="List-group-item" ngIf="profile.bio">{{profile.bio}}</li>
+              <li class="List-group-item" ngIf="profile.bio">{{profile.bio}}</li>
+              <li class="List-group-item" ngIf="profile.bio">{{profile.bio}}</li>
 
             </ul>
 
