--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -21,6 +21,14 @@
             </ul>
 
           </div>
+          <div class="col-sm-4">
+            <div>
+              <p>
+                <span class="label label-default">{{profile.followers}} Followers</span>
+              </p>
+            </div>
+
+          </div>
 
         </div>
 
