added label info

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -25,6 +25,9 @@
             <div>
               <p>
                 <span class="label label-default">{{profile.followers}} Followers</span>
+                <span class="label label-primary">Following{{profile.following}}</span>
+                <span class="label label-success">{{profile.public_gists}} Public gists</span>
+                <span class="label label-info">{{profile.public_repos}} Public Repos</span>
               </p>
             </div>
 
