--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -29,7 +29,10 @@
                 <span class="label label-success">{{profile.public_gists}} Public gists</span>
                 <span class="label label-info">{{profile.public_repos}} Public Repos</span>
               </p>
-              <p><a href="{{profile.html_url}}" class="btn btn-success btn-sm">View profile on github</a></p>
+              <p><a href="{{profile.html_url}}" target="blank" class="btn btn-success btn-sm">View profile on github</a></p>
+              <div class="panel panel-default">
+
+              </div>
             </div>
 
           </div>
