--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -31,6 +31,16 @@
               </p>
               <p><a href="{{profile.html_url}}" target="blank" class="btn btn-success btn-sm">View profile on github</a></p>
               <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h3 class="panel-title">Repos</h3>
+
+                </div>
+                <div class="panel-body" *ngFor="let repo of repos">
+                  <p>
+
+                  </p>
+
+                </div>
 
               </div>
             </div>
