--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -37,6 +37,7 @@
                 </div>
                 <div class="panel-body" *ngFor="let repo of repos">
                   <p>
+                    {{repo.name}} 
 
                   </p>
 
