--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -36,11 +36,12 @@
 
                 </div>
                 <div class="panel-body" *ngFor="let repo of repos">
-                  <p>
-                    {{repo.name}} <a href="{{repo.html_url}}" target="_blank" class="btn btn-sm btn-warning">View this project on github</a>
-                    {{repo.description}}
+                  <p class="clearfix">
+                    {{repo.name}} <a href="{{repo.html_url}}" target="_blank" class="btn btn-sm btn-warning pull-right">View this project on github</a>
+                    
 
                   </p>
+                  <p>{{repo.description}}</p>
 
                 </div>
 
