--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,3 +1,10 @@
+<form action="">
+  <div class="form-group">
+    <input type="text" class="form-control" placeholder="">
+
+  </div>
+
+</form>
 <div *ngIf="profile">
     <div class="panel panel-default">
       <div class="panel-heading">
