--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,7 +1,8 @@
 <form action="" class="search-form">
   <div class="form-group">
-    <input type="text" class="form-control" placeholder="Search git users with username" [(
-    ngModel)]="username" name="username" (keyup)="findprofile()">
+      <img src="https://bit.ly/2PyhXW2" alt="" height="200" width="200">
+      <h3><strong>Search Gihub Username</strong></h3>
+    <input type="text" class="form-control" placeholder="Search git users with username" [(ngModel)]="username" name="username" (keyup)="findProfile()">
 
   </div>
 
